# noah-rust-sdk

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: changes.yaml  ci.yaml  release.yaml
docs/: authentication.md  error-handling.md  examples.md  getting-started.md
examples/: basic_client.rs  checkout_session.rs  create_customer.rs  list_balances.rs  sell_transaction.rs  webhook_handler.rs
src/: auth.rs  axum_wrappers.rs  client.rs  config.rs  error.rs  lib.rs
src/api/: balances.rs  channels.rs  checkout.rs  customers.rs  mod.rs  onboarding.rs  payment_methods.rs  transactions.rs  workflows.rs
src/apis/: configuration.rs  mod.rs  onboarding_api.rs  payin_api.rs  payout_api.rs  utilities_api.rs
src/models/: _checkout_payin_crypto_post_request.rs  _checkout_payin_fiat_post_request.rs  _checkout_payout_fiat_post_request.rs  amount_condition.rs  associate_information_input.rs  axum.rs  balance_response.rs  balances.rs  bank_deposit_to_onchain_address_hosted_request.rs  bank_deposit_to_onchain_address_request.rs  bank_deposit_to_onchain_address_response.rs  business_associate_information_input.rs  business_customer.rs  business_customer_input.rs  business_customer_prefill.rs  business_customer_prefill_amlctf_regulated.rs  business_customer_prefill_amlctf_regulated_customer_risk_split.rs  business_customer_prefill_screening_input.rs  business_financials_input.rs  channel.rs  channel_calculated.rs  channel_limits.rs  channels.rs  checkout.rs  checkout_manage_request.rs  checkout_session.rs  checkout_session_response.rs  common.rs  comparison_operator.rs  customer.rs  customer_form_request.rs  customer_identity.rs  customer_input.rs  customers.rs  deny_extension_item.rs  deny_extension_principal.rs  deposit_destination_trigger.rs  deposit_destination_trigger_input.rs  deposit_source_trigger.rs  deposit_source_trigger_condition.rs  (+86 more)
tests/: client_test.rs  models_test.rs
tests/integration/: client_test.rs
tests/unit/: models_test.rs
