[package]
name = "noah-sdk"
version = "1.1.0"
edition = "2021"
authors = ["Yezz123 <hello@yezz.me>"]
description = "A modern, type-safe Rust SDK for the Noah Business API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yezz123/noah-rust-sdk"
documentation = "https://docs.rs/noah-sdk"
readme = "README.md"
keywords = ["noah", "sdk", "crypto", "payments", "fintech"]
categories = ["api-bindings", "web-programming", "authentication"]

[package.metadata.docs.rs]
features = ["async", "rustls-tls"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "^0.12", default-features = false, features = [
  "json",
  "multipart",
] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
mockito = "1.7"
serde_test = "1.0"

[lib]
name = "noah_sdk"
path = "src/lib.rs"

[[example]]
name = "basic_client"
path = "examples/basic_client.rs"

[[example]]
name = "list_balances"
path = "examples/list_balances.rs"

[[example]]
name = "create_customer"
path = "examples/create_customer.rs"

[[example]]
name = "checkout_session"
path = "examples/checkout_session.rs"

[[example]]
name = "sell_transaction"
path = "examples/sell_transaction.rs"

[[example]]
name = "webhook_handler"
path = "examples/webhook_handler.rs"
